# elevation_map_ros2

./: .gitignore
map_ros2/: dockerfile  entrypoint_local.sh  local_cyclonedds.xml  ros_entrypoint.sh
map_ros2/src/mapping_ros2/elevation_mapping/config/elevation_maps/: long_range.yaml
map_ros2/src/mapping_ros2/elevation_mapping/config/postprocessing/: postprocessor_pipeline.yaml
map_ros2/src/mapping_ros2/elevation_mapping/config/robots/: ground_truth_demo.yaml  velodyne_static.yaml
map_ros2/src/mapping_ros2/elevation_mapping/include/elevation_mapping/: ElevationMap.hpp  ElevationMapping.hpp
map_ros2/src/mapping_ros2/elevation_mapping/include/elevation_mapping/input_sources/: Input.hpp
map_ros2/src/mapping_ros2/elevation_mapping/include/elevation_mapping/postprocessing/: PostprocessingPipelineFunctor.hpp
map_ros2/src/mapping_ros2/elevation_mapping/launch/: elevationMapping.launch.py  elevationMappingVelodyne.launch.py
map_ros2/src/mapping_ros2/elevation_mapping/src/: ElevationMap.cpp  ElevationMapping.cpp
map_ros2/src/mapping_ros2/elevation_mapping/src/postprocessing/: PostprocessingPipelineFunctor.cpp  PostprocessorPool.cpp
map_ros2/src/mapping_ros2/obstacle_layers/: CMakeLists.txt  package.xml
map_ros2/src/mapping_ros2/obstacle_layers/launch/: obstacle_layers.launch.py
map_ros2/src/mapping_ros2/obstacle_layers/src/: obstacle_layers_node.cpp
velodyne/: dockerfile  entrypoint_local.sh  local_cyclonedds.xml
velodyne/src/velodyne/launch/: velodyne-all-nodes-HDL32E-launch.py  velodyne-points-only-HDL32E-composed-launch.py
velodyne/src/velodyne_driver/config/: HDL32E-velodyne_driver_node-params.yaml
velodyne/src/velodyne_driver/launch/: velodyne_driver_node-HDL32E-launch.py
velodyne/src/velodyne_pointcloud/config/: HDL32E-velodyne_transform_node-fast-params.yaml  HDL32E-velodyne_transform_node-params.yaml
velodyne/src/velodyne_pointcloud/launch/: velodyne_transform_node-HDL32E-launch.py
velodyne/velodyne_driver/config/: VLP32C-velodyne_driver_node-params.yaml
