<?xml version="1.0"?>
<package format="3">
  <name>obstacle_layers</name>
  <version>0.0.1</version>
  <description>Derive robust obstacle evidence layers from an egocentric elevation GridMap for UGV navigation (MPPI/SAC).</description>

  <maintainer email="todo@todo.todo">todo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
